# osr-resolve

./: .gitignore  justfile  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yaml
.github/workflows/: docs.yaml  image-dev.yaml
config/pipeline/geonames/: 0001.yaml  0010.yaml  0020.yaml  0030.yaml  0040.yaml  0050.yaml  0060.yaml
config/pipeline/orcid/: 0001.yaml  0010.yaml  0020.yaml
scripts/pipeline/geonames/: 0001.py  0010.py  0020.py  0030.py  0040.py  0050.py  0060.py
scripts/pipeline/orcid/: 0001.py  0020.py
src/osr_resolve/pipeline/geonames/: 0010.py  0020.py  0030.py  0040.py  0050.py  0060.py
src/osr_resolve/pipeline/orcid/: 0010.py  0020.py
src/osr_resolve/tools/: find_last.py  hash_file.py  json_write.py  parquet_scan.py  parquet_write.py  stats_table.py  table_rule.py  validate_columns.py
